syntax = "proto3";

package grpc;

message Command {
    string name = 1;
    bool enabled = 2;
    string cooldown = 3;
}

message Module {
    string name = 1;
    map<string, Command> commands = 2;
    map<string, bool> enabled_commands = 3;
}

message ModulesRequest {
    string channel = 1;
}

message ModulesResponse {
    map<string, Module> modules = 1;
}

message Channel {
    string name = 1;
    //map<string, Module> modules = 2;
    map<string, bool> enabled_modules = 3;
}

message ChannelsRequest {}

message ChannelsResponse {
    map<string, Channel> channels = 1;
}

service BotService {
    rpc Channels (ChannelsRequest) returns (ChannelsResponse);
    rpc Modules (ModulesRequest) returns (ModulesResponse);
}